remove probable cause endpoints (#485)
